add about and languages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <main>
         <h1>Hamid BouTagine</h1>
+        <h2>Développeur web junior</h2>
         <section id="info">
             <article>
                 <address>
@@ -17,9 +18,27 @@
                     <p class="complement_rue">85194 Vendée</p>
                     <p class="email">hamid.boutagine@gmail.com</p>
                     <p class="numero">0666666666</p>
-
                 </address>
             </article>
+            <section>
+                <article id="about">
+                    <h3>A Propos</h3>
+                    <p>10 ans d'éxpérience dans le développement de projets web, en particulier la conception de sites internet et d'applications. 
+                        Autonome sur mon poste tout en appréciant le travail en équipe avec des collaborateurs sur site ou distants, 
+                    je cherche à relever de nouveaux défis</p>
+                </article>
+                <article id="Languages">
+                    <h3>Langues parlées</h3>
+                    <ul>
+                        <li>
+                            Francais - Langue maternelle
+                        </li>
+                        <li>Arab - Deuxieme langue maternelle</li>
+                        <li>Anglais - Langue intermédiaire</li>
+                        <li>Espagnol - Débutant</li>
+                    </ul>
+                </article>
+            </section>
         </section>
     </main>
     
