add center of interest

--- a/index.html
+++ b/index.html
@@ -33,10 +33,32 @@
                         <li>
                             Francais - Langue maternelle
                         </li>
-                        <li>Arab - Deuxieme langue maternelle</li>
-                        <li>Anglais - Langue intermédiaire</li>
-                        <li>Espagnol - Débutant</li>
+                        <li>
+                            Arab - Deuxieme langue maternelle
+                        </li>
+                        <li>
+                            Anglais - Langue intermédiaire
+                        </li>
+                        <li>
+                            Espagnol - Débutant
+                        </li>
                     </ul>
+                    <article id="center_of_interest">
+                        <h3>Centre d'interêt</h3>
+                        <ul>
+                            <li>
+                                Musculation
+                            </li>
+                            <li>
+                                Randonnée
+                            </li>
+                            <li>
+                                Voyages
+                            </li>
+                            <li>
+                                Jeux vidéos
+                            </li>
+                        </ul>
                 </article>
             </section>
         </section>
