add professional experience

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                     <p class="numero">0666666666</p>
                 </address>
             </article>
-            <section>
+        </section>
+        <section id="me">
                 <article id="about">
                     <h3>A Propos</h3>
                     <p>10 ans d'éxpérience dans le développement de projets web, en particulier la conception de sites internet et d'applications. 
@@ -59,8 +60,51 @@
                                 Jeux vidéos
                             </li>
                         </ul>
-                </article>
-            </section>
+            </article>
+        </section>
+        <section id="ensemble">
+            <article id="professional_experience">
+                <h3>Expérience professionnelles</h3>
+                <h4>Développeur Web Chez ProdiMarché</h4>
+                <h5>de Octobre 2016 à ce jour</h5>
+                <ul>
+                    <li>
+                        Documentation et test du code
+                    </li>
+                    <li>
+                        Participation au débeloppement et au déploiement des applications internes (ERP) et clients
+                    </li>
+                    <li>
+                        Soutient sur la partie Front-end à l'équipe en place
+                    </li>
+                </ul>
+                <h4>Développeur web chez AC Market</h4>
+                <h5>de Sept 2012 à sept 2016</h5>
+                <ul>
+                    <li>
+                        Gestion de la migration du site de l'entreprise
+                    </li>
+                    <li>
+                        Maintenance du site
+                    </li>
+                    <li>
+                        Proposition d'améliorations (fonctionalité, ergonomie, etc...) en lien avec les métiers
+                    </li>
+                </ul>
+                <h4>Développeur Web chez Web & Co</h4>
+                <h5>de sept 2010 à sept 2012</h5>
+                <ul>
+                    <li>
+                        Analyse des besoins exprimés sur cahier des charges
+                    </li>
+                    <li>
+                        Dispense de formation aux utilisateurs
+                    </li>
+                    <li>
+                        Ecritures de programmes
+                    </li>
+                </ul>
+            </article>
         </section>
     </main>
     
