add redirect link

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <section id="info">
             <article id="information">
                 <address>
-                    <p id="rue">3 Rue de la forge<br/>
-                        85194 Vendée</p>
-                    <p id="email">hamid.boutagine@gmail.com</p>
-                    <p id="numero">0666666666</p>
+                    <p id="rue"><a href="https://maps.app.goo.gl/1y69qCrNTvBWTXD6A" target="_blank">3 Rue de la forge<br/>
+                        85100 Les Sables-d'Olonne</a></p>
+                    <p id="email"><a href="mailto:idjedainimohamed@gmail.com">hamid.boutagine@gmail.com</a></p>
+                    <p id="numero"><a href="tel:0666666666">0666666666</a></p>
                 </address>
             </article>
         </section>
