--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div id="profil"><img src="./assets/image/photo de profil.jpg" alt="photo de profil d'un homme"></div>
+        <div id="profil"><img src="./assets/image/photo_de_profil.jpg" alt="photo de profil d'un homme"></div>
         <h1>Hamid BouTagine</h1>
         <h2>Développeur web junior</h2>
     </header>
